# cookiecutter-c

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_namelower}}/include/: {{cookiecutter.project_namelower}}.h
{{cookiecutter.project_namelower}}/src/: main.c
{{cookiecutter.project_name}}/src/: main.c
{{cookiecutter.project_slug}}/: CMakeLists.txt  README.md  vcpkg.json
{{cookiecutter.project_slug}}/include/: {{cookiecutter.project_slug}}.h
{{cookiecutter.project_slug}}/src/: CMakeLists.txt  main.c
